--- a/modules/repository/src/main/AndroidManifest.xml
+++ b/modules/repository/src/main/AndroidManifest.xml
@@ -1,9 +1,25 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tangpj.repository">
+    package="com.tangpj.repository" >
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:label="@string/app_name"
-        >
+        android:label="@string/app_name">
+
+        <activity android:name=".ui.repositories.RepositoriesActivity"
+            android:launchMode="singleTop">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <data android:scheme="recurve" android:host="oauth" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+            </intent-filter>
+        </activity>
 
     </application>
+
 </manifest>
